# GoIT_WEB_HW_7

./: README.md  cli_crud.py  config.ini  db_connect.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 63dde6e4b36f_init.py  cd902c44a537_2nd_commit.py  e7732cf2e4d8_init.py  ebbfc6e151dd_3rd_commit.py
