[tool.poetry]
name = "goit-web-hw-7"
version = "0.1.0"
description = ""
authors = ["Serhii_Stepanov <stepa.sergey.nov@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_web_hw_7"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.18"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
faker = "^18.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
